Added docker file, prometheus metrics and grafana