@@ -1,15 +1,24 @@
 package com.example.holidayapp.service;
 
+import com.example.holidayapp.exception.HolidayApiException;
 import com.example.holidayapp.model.CountryHolidaysDto;
 import com.example.holidayapp.model.HolidayCountPerCountryDto;
 import com.example.holidayapp.model.HolidayDto;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -24,26 +33,30 @@ import static java.util.Objects.nonNull;
 public class HolidayService {
 
     private final RestTemplate restTemplate;
-    private static final String API_BASE_URL = "https://date.nager.at/Api/v3";
+    private final String baseUrl;
 
-    public HolidayService(RestTemplate restTemplate) {
+    public HolidayService(RestTemplate restTemplate,
+                          @Value("${holidayapp.external.api.base_url}") String baseUrl) {
         this.restTemplate = restTemplate;
+        this.baseUrl = baseUrl;
     }
 
     /**
      * Given a country code to return last 3 celebrated holidays.
+     *
      * @param countryCode string
      * @return List of HolidayDto
      */
     public List<HolidayDto> getLast3(String countryCode) {
         int currentYear = LocalDate.now().getYear();
         HolidayDto[] holidayDtoList = getHolidayDtos(currentYear, countryCode);
-        if(holidayDtoList.length == 0)
-            return Collections.emptyList();
+        if (isNull(holidayDtoList)) {
+            log.error(STR."External API is not returning any data for country code:\{countryCode}");
+            throw new HolidayApiException(STR."External API is not returning any data for country code:\{countryCode}");
+        }
         return Arrays.stream(holidayDtoList)
-                .filter(Objects::nonNull)
-                //.filter(holidayDto->holidayDto.getDate() != null)
-                .filter(holiday-> holiday.getDate().isBefore(LocalDate.now()))
+                .filter(holidayDto -> holidayDto.getDate() != null)
+                .filter(holiday -> holiday.getDate().isBefore(LocalDate.now()))
                 .sorted(Comparator.comparing(HolidayDto::getDate).reversed())
                 .limit(3)
                 .collect(Collectors.toList());
@@ -52,42 +65,38 @@ public class HolidayService {
 
     /**
      * Given year and country Codes,return public holidays for each country, not falling on weekends.
-     * @param year int
+     *
+     * @param year         int
      * @param countryCodes list of countries
      * @return List of HolidayDtoForCountPerCountry
      */
     public List<HolidayCountPerCountryDto> getHolidayNotOnWeekend(int year, List<String> countryCodes) {
-        List<HolidayCountPerCountryDto> result = new ArrayList<>();
-        for(String countryCode : countryCodes) {
-            HolidayDto[] holidayDtoList = getHolidayDtos(year, countryCode);
-            if(nonNull(holidayDtoList)){
-                long count = Arrays.stream(holidayDtoList).filter(holidayDto ->
-                    (holidayDto.getDate().getDayOfWeek() != DayOfWeek.SATURDAY
-                            && holidayDto.getDate().getDayOfWeek() != DayOfWeek.SUNDAY))
-                        .count();
-                result.add(new HolidayCountPerCountryDto(countryCode, count));
-            } else {
-                log.info("Api does not have data for country code {}", countryCode);
-                throw new RuntimeException("Api does not have data for country code " + countryCode);
-            }
-        }
-        return result.stream().sorted(Comparator.comparing(HolidayCountPerCountryDto::workingDayHolidays)
-                        .reversed()).collect(Collectors.toList());
+        List<CompletableFuture<HolidayCountPerCountryDto>> futureResult =
+                countryCodes.stream().map(code -> getHolidayCount(year, code)).toList();
+
+        return futureResult.stream().map(CompletableFuture::join)
+                .sorted(Comparator.comparing(HolidayCountPerCountryDto::workingDayHolidays)
+                        .reversed()).toList();
     }
 
     /**
-     * This method return duplicate holidays for given 2 countries.
-     * @param year year
-     * @param countryFirst country code
+     * This method return common holidays for given 2 countries.
+     *
+     * @param year          year
+     * @param countryFirst  country code
      * @param countrySecond country code
      * @return CountryHolidaysDto list of countries holidays
      */
-    public List<CountryHolidaysDto> getDuplicateHolidays(int year, String countryFirst, String countrySecond) {
+    public List<CountryHolidaysDto> getCommonHolidays(int year, String countryFirst, String countrySecond) {
         HolidayDto[] holidayDtoForFirst = getHolidayDtos(year, countryFirst);
         HolidayDto[] holidayDtoForSecond = getHolidayDtos(year, countrySecond);
 
-        if(isNull(holidayDtoForFirst) || isNull(holidayDtoForSecond))
-            return Collections.emptyList();
+        if (isNull(holidayDtoForFirst) || isNull(holidayDtoForSecond)) {
+            log.error("External API is not returning any data for country code " + countryFirst
+                    + "or" + countrySecond);
+            throw new HolidayApiException(STR."External API is not returning any" +
+                    STR."data for country code or \{countryFirst}or\{countrySecond}");
+        }
         Map<LocalDate, HolidayDto> mapFirst = Arrays.stream(holidayDtoForFirst)
                 .collect(Collectors.toMap(HolidayDto::getDate, Function.identity()));
         return Arrays.stream(holidayDtoForSecond).filter(h ->
@@ -99,14 +108,39 @@ public class HolidayService {
     }
 
     /**
+     * Async method to get the count for each country code.
+     *
+     * @param year        year
+     * @param countryCode country code
+     * @return CompletableFuture of HolidayCountPerCountryDto
+     */
+    @Async
+    private CompletableFuture<HolidayCountPerCountryDto> getHolidayCount(int year, String countryCode) {
+        HolidayDto[] holidayDtoList = getHolidayDtos(year, countryCode);
+        if (isNull(holidayDtoList)) {
+            return CompletableFuture.completedFuture(new HolidayCountPerCountryDto(countryCode, 0));
+        }
+        long count = Arrays.stream(holidayDtoList).filter(holidayDto ->
+                        (holidayDto.getDate().getDayOfWeek() != DayOfWeek.SATURDAY
+                                && holidayDto.getDate().getDayOfWeek() != DayOfWeek.SUNDAY))
+                .count();
+        return CompletableFuture.completedFuture(new HolidayCountPerCountryDto(countryCode, count));
+    }
+
+    /**
      * Common method to get data from api.
-     * @param year year
+     *
+     * @param year    year
      * @param country country
      * @return HolidayDto list
      */
 
     private HolidayDto[] getHolidayDtos(int year, String country) {
-        String url = API_BASE_URL + "/PublicHolidays/" + year + "/" + country;
-        return restTemplate.getForObject(url, HolidayDto[].class);
+        try {
+            String url = baseUrl + "/" + year + "/" + country;
+            return restTemplate.getForObject(url, HolidayDto[].class);
+        } catch (RestClientException ex) {
+            throw new HolidayApiException("Failed to fetch holidays from external API.", ex);
+        }
     }
 }
